runtime/gen/basis-ffi.h

extern C_Int_t CommandLine_argc;
extern C_StringArray_t CommandLine_argv;
extern C_String_t CommandLine_commandName;
C_String_t Cygwin_toFullWindowsPath(NullString8_t);
C_Errno_t(C_Int_t) Date_gmTime(Ref(C_Time_t));
C_Double_t Date_localOffset(void);
C_Errno_t(C_Int_t) Date_localTime(Ref(C_Time_t));
C_Errno_t(C_Time_t) Date_mkTime(void);
C_Size_t Date_strfTime(Array(Char8_t),C_Size_t,NullString8_t);
C_Int_t Date_Tm_getHour(void);
C_Int_t Date_Tm_getIsDst(void);
C_Int_t Date_Tm_getMDay(void);
C_Int_t Date_Tm_getMin(void);
C_Int_t Date_Tm_getMon(void);
C_Int_t Date_Tm_getSec(void);
C_Int_t Date_Tm_getWDay(void);
C_Int_t Date_Tm_getYDay(void);
C_Int_t Date_Tm_getYear(void);
void Date_Tm_setHour(C_Int_t);
void Date_Tm_setIsDst(C_Int_t);
void Date_Tm_setMDay(C_Int_t);
void Date_Tm_setMin(C_Int_t);
void Date_Tm_setMon(C_Int_t);
void Date_Tm_setSec(C_Int_t);
void Date_Tm_setWDay(C_Int_t);
void Date_Tm_setYDay(C_Int_t);
void Date_Tm_setYear(C_Int_t);
C_Int_t IEEEReal_getRoundingMode(void);
extern const C_Int_t IEEEReal_RoundingMode_FE_DOWNWARD;
extern const C_Int_t IEEEReal_RoundingMode_FE_NOSUPPORT;
extern const C_Int_t IEEEReal_RoundingMode_FE_TONEAREST;
extern const C_Int_t IEEEReal_RoundingMode_FE_TOWARDZERO;
extern const C_Int_t IEEEReal_RoundingMode_FE_UPWARD;
void IEEEReal_setRoundingMode(C_Int_t);
C_Size_t MinGW_getTempPath(C_Size_t,Array(Char8_t));
__attribute__((noreturn)) void MLton_bug(NullString8_t);
extern const C_Int_t MLton_Itimer_PROF;
extern const C_Int_t MLton_Itimer_REAL;
C_Errno_t(C_Int_t) MLton_Itimer_set(C_Int_t,C_Time_t,C_SUSeconds_t,C_Time_t,C_SUSeconds_t);
extern const C_Int_t MLton_Itimer_VIRTUAL;
C_Errno_t(C_Int_t) MLton_Process_spawne(NullString8_t,String8_t,Array(C_Pointer_t),Vector(C_Size_t),String8_t,Array(C_Pointer_t),Vector(C_Size_t));
C_Errno_t(C_Int_t) MLton_Process_spawnp(NullString8_t,String8_t,Array(C_Pointer_t),Vector(C_Size_t));
extern const C_Int_t MLton_Rlimit_AS;
extern const C_Int_t MLton_Rlimit_CORE;
extern const C_Int_t MLton_Rlimit_CPU;
extern const C_Int_t MLton_Rlimit_DATA;
extern const C_Int_t MLton_Rlimit_FSIZE;
C_Errno_t(C_Int_t) MLton_Rlimit_get(C_Int_t);
C_RLim_t MLton_Rlimit_getHard(void);
C_RLim_t MLton_Rlimit_getSoft(void);
extern const C_RLim_t MLton_Rlimit_INFINITY;
extern const C_Int_t MLton_Rlimit_NOFILE;
C_Errno_t(C_Int_t) MLton_Rlimit_set(C_Int_t,C_RLim_t,C_RLim_t);
extern const C_Int_t MLton_Rlimit_STACK;
C_Time_t MLton_Rusage_children_stime_sec(void);
C_SUSeconds_t MLton_Rusage_children_stime_usec(void);
C_Time_t MLton_Rusage_children_utime_sec(void);
C_SUSeconds_t MLton_Rusage_children_utime_usec(void);
C_Time_t MLton_Rusage_gc_stime_sec(void);
C_SUSeconds_t MLton_Rusage_gc_stime_usec(void);
C_Time_t MLton_Rusage_gc_utime_sec(void);
C_SUSeconds_t MLton_Rusage_gc_utime_usec(void);
void MLton_Rusage_getrusage(void);
C_Time_t MLton_Rusage_self_stime_sec(void);
C_SUSeconds_t MLton_Rusage_self_stime_usec(void);
C_Time_t MLton_Rusage_self_utime_sec(void);
C_SUSeconds_t MLton_Rusage_self_utime_usec(void);
void MLton_Syslog_closelog(void);
extern const C_Int_t MLton_Syslog_Facility_LOG_AUTH;
extern const C_Int_t MLton_Syslog_Facility_LOG_CRON;
extern const C_Int_t MLton_Syslog_Facility_LOG_DAEMON;
extern const C_Int_t MLton_Syslog_Facility_LOG_KERN;
extern const C_Int_t MLton_Syslog_Facility_LOG_LOCAL0;
extern const C_Int_t MLton_Syslog_Facility_LOG_LOCAL1;
extern const C_Int_t MLton_Syslog_Facility_LOG_LOCAL2;
extern const C_Int_t MLton_Syslog_Facility_LOG_LOCAL3;
extern const C_Int_t MLton_Syslog_Facility_LOG_LOCAL4;
extern const C_Int_t MLton_Syslog_Facility_LOG_LOCAL5;
extern const C_Int_t MLton_Syslog_Facility_LOG_LOCAL6;
extern const C_Int_t MLton_Syslog_Facility_LOG_LOCAL7;
extern const C_Int_t MLton_Syslog_Facility_LOG_LPR;
extern const C_Int_t MLton_Syslog_Facility_LOG_MAIL;
extern const C_Int_t MLton_Syslog_Facility_LOG_NEWS;
extern const C_Int_t MLton_Syslog_Facility_LOG_USER;
extern const C_Int_t MLton_Syslog_Facility_LOG_UUCP;
extern const C_Int_t MLton_Syslog_Logopt_LOG_CONS;
extern const C_Int_t MLton_Syslog_Logopt_LOG_NDELAY;
extern const C_Int_t MLton_Syslog_Logopt_LOG_NOWAIT;
extern const C_Int_t MLton_Syslog_Logopt_LOG_ODELAY;
extern const C_Int_t MLton_Syslog_Logopt_LOG_PID;
void MLton_Syslog_openlog(NullString8_t,C_Int_t,C_Int_t);
extern const C_Int_t MLton_Syslog_Severity_LOG_ALERT;
extern const C_Int_t MLton_Syslog_Severity_LOG_CRIT;
extern const C_Int_t MLton_Syslog_Severity_LOG_DEBUG;
extern const C_Int_t MLton_Syslog_Severity_LOG_EMERG;
extern const C_Int_t MLton_Syslog_Severity_LOG_ERR;
extern const C_Int_t MLton_Syslog_Severity_LOG_INFO;
extern const C_Int_t MLton_Syslog_Severity_LOG_NOTICE;
extern const C_Int_t MLton_Syslog_Severity_LOG_WARNING;
void MLton_Syslog_syslog(C_Int_t,NullString8_t);
Word32_t Net_htonl(Word32_t);
Word16_t Net_htons(Word16_t);
Word32_t Net_ntohl(Word32_t);
Word16_t Net_ntohs(Word16_t);
C_Int_t NetHostDB_getByAddress(Vector(Word8_t),C_Socklen_t);
C_Int_t NetHostDB_getByName(NullString8_t);
void NetHostDB_getEntryAddrsN(C_Int_t,Array(Word8_t));
C_Int_t NetHostDB_getEntryAddrsNum(void);
C_Int_t NetHostDB_getEntryAddrType(void);
C_String_t NetHostDB_getEntryAliasesN(C_Int_t);
C_Int_t NetHostDB_getEntryAliasesNum(void);
C_Int_t NetHostDB_getEntryLength(void);
C_String_t NetHostDB_getEntryName(void);
C_Errno_t(C_Int_t) NetHostDB_getHostName(Array(Char8_t),C_Size_t);
extern const C_Int_t NetHostDB_INADDR_ANY;
extern const C_Size_t NetHostDB_inAddrSize;
C_Int_t NetProtDB_getByName(NullString8_t);
C_Int_t NetProtDB_getByNumber(C_Int_t);
C_String_t NetProtDB_getEntryAliasesN(C_Int_t);
C_Int_t NetProtDB_getEntryAliasesNum(void);
C_String_t NetProtDB_getEntryName(void);
C_Int_t NetProtDB_getEntryProto(void);
C_Int_t NetServDB_getByName(NullString8_t,NullString8_t);
C_Int_t NetServDB_getByNameNull(NullString8_t);
C_Int_t NetServDB_getByPort(C_Int_t,NullString8_t);
C_Int_t NetServDB_getByPortNull(C_Int_t);
C_String_t NetServDB_getEntryAliasesN(C_Int_t);
C_Int_t NetServDB_getEntryAliasesNum(void);
C_String_t NetServDB_getEntryName(void);
C_Int_t NetServDB_getEntryPort(void);
C_String_t NetServDB_getEntryProto(void);
C_Errno_t(C_Int_t) OS_IO_poll(Vector(C_Fd_t),Vector(C_Short_t),C_NFds_t,C_Int_t,Array(C_Short_t));
extern const C_Short_t OS_IO_POLLIN;
extern const C_Short_t OS_IO_POLLOUT;
extern const C_Short_t OS_IO_POLLPRI;
void Posix_Error_clearErrno(void);
extern const C_Int_t Posix_Error_E2BIG;
extern const C_Int_t Posix_Error_EACCES;
extern const C_Int_t Posix_Error_EADDRINUSE;
extern const C_Int_t Posix_Error_EADDRNOTAVAIL;
extern const C_Int_t Posix_Error_EAFNOSUPPORT;