runtime/gen/basis-ffi.sml


local open Primitive in 
structure PrimitiveFFI =
struct
structure CommandLine = 
struct
val (argcGet, argcSet) = _symbol "CommandLine_argc" private : (unit -> (C_Int.t)) * ((C_Int.t) -> unit);
val (argvGet, argvSet) = _symbol "CommandLine_argv" private : (unit -> (C_StringArray.t)) * ((C_StringArray.t) -> unit);
val (commandNameGet, commandNameSet) = _symbol "CommandLine_commandName" private : (unit -> (C_String.t)) * ((C_String.t) -> unit);
end
structure Cygwin = 
struct
val toFullWindowsPath = _import "Cygwin_toFullWindowsPath" private : NullString8.t -> C_String.t;
end
structure Date = 
struct
val gmTime = _import "Date_gmTime" private : (C_Time.t) ref -> (C_Int.t) C_Errno.t;
val localOffset = _import "Date_localOffset" private : unit -> C_Double.t;
val localTime = _import "Date_localTime" private : (C_Time.t) ref -> (C_Int.t) C_Errno.t;
val mkTime = _import "Date_mkTime" private : unit -> (C_Time.t) C_Errno.t;
val strfTime = _import "Date_strfTime" private : (Char8.t) array * C_Size.t * NullString8.t -> C_Size.t;
structure Tm = 
struct
val getHour = _import "Date_Tm_getHour" private : unit -> C_Int.t;
val getIsDst = _import "Date_Tm_getIsDst" private : unit -> C_Int.t;
val getMDay = _import "Date_Tm_getMDay" private : unit -> C_Int.t;
val getMin = _import "Date_Tm_getMin" private : unit -> C_Int.t;
val getMon = _import "Date_Tm_getMon" private : unit -> C_Int.t;
val getSec = _import "Date_Tm_getSec" private : unit -> C_Int.t;
val getWDay = _import "Date_Tm_getWDay" private : unit -> C_Int.t;
val getYDay = _import "Date_Tm_getYDay" private : unit -> C_Int.t;
val getYear = _import "Date_Tm_getYear" private : unit -> C_Int.t;
val setHour = _import "Date_Tm_setHour" private : C_Int.t -> unit;
val setIsDst = _import "Date_Tm_setIsDst" private : C_Int.t -> unit;
val setMDay = _import "Date_Tm_setMDay" private : C_Int.t -> unit;
val setMin = _import "Date_Tm_setMin" private : C_Int.t -> unit;
val setMon = _import "Date_Tm_setMon" private : C_Int.t -> unit;
val setSec = _import "Date_Tm_setSec" private : C_Int.t -> unit;
val setWDay = _import "Date_Tm_setWDay" private : C_Int.t -> unit;
val setYDay = _import "Date_Tm_setYDay" private : C_Int.t -> unit;
val setYear = _import "Date_Tm_setYear" private : C_Int.t -> unit;
end
end
structure IEEEReal = 
struct
val getRoundingMode = _import "IEEEReal_getRoundingMode" private : unit -> C_Int.t;
structure RoundingMode = 
struct
val FE_DOWNWARD = _const "IEEEReal_RoundingMode_FE_DOWNWARD" : C_Int.t;
val FE_NOSUPPORT = _const "IEEEReal_RoundingMode_FE_NOSUPPORT" : C_Int.t;
val FE_TONEAREST = _const "IEEEReal_RoundingMode_FE_TONEAREST" : C_Int.t;
val FE_TOWARDZERO = _const "IEEEReal_RoundingMode_FE_TOWARDZERO" : C_Int.t;
val FE_UPWARD = _const "IEEEReal_RoundingMode_FE_UPWARD" : C_Int.t;
end
val setRoundingMode = _import "IEEEReal_setRoundingMode" private : C_Int.t -> C_Int.t;
end
structure MinGW = 
struct
val clearNonBlock = _import "MinGW_clearNonBlock" private : C_Fd.t -> unit;
val getTempPath = _import "MinGW_getTempPath" private : C_Size.t * (Char8.t) array -> C_Size.t;
val setNonBlock = _import "MinGW_setNonBlock" private : C_Fd.t -> unit;
end
structure MLton = 
struct
val bug = _import "MLton_bug" private : String8.t -> unit;
structure Itimer = 
struct
val PROF = _const "MLton_Itimer_PROF" : C_Int.t;
val REAL = _const "MLton_Itimer_REAL" : C_Int.t;
val set = _import "MLton_Itimer_set" private : C_Int.t * C_Time.t * C_SUSeconds.t * C_Time.t * C_SUSeconds.t -> (C_Int.t) C_Errno.t;
val VIRTUAL = _const "MLton_Itimer_VIRTUAL" : C_Int.t;
end
structure Process = 
struct
val spawne = _import "MLton_Process_spawne" private : NullString8.t * (NullString8.t) array * (NullString8.t) array -> (C_PId.t) C_Errno.t;
val spawnp = _import "MLton_Process_spawnp" private : NullString8.t * (NullString8.t) array -> (C_PId.t) C_Errno.t;
end
structure Rlimit = 
struct
val AS = _const "MLton_Rlimit_AS" : C_Int.t;
val CORE = _const "MLton_Rlimit_CORE" : C_Int.t;
val CPU = _const "MLton_Rlimit_CPU" : C_Int.t;
val DATA = _const "MLton_Rlimit_DATA" : C_Int.t;
val FSIZE = _const "MLton_Rlimit_FSIZE" : C_Int.t;
val get = _import "MLton_Rlimit_get" private : C_Int.t -> (C_Int.t) C_Errno.t;
val getHard = _import "MLton_Rlimit_getHard" private : unit -> C_RLim.t;
val getSoft = _import "MLton_Rlimit_getSoft" private : unit -> C_RLim.t;
val INFINITY = _const "MLton_Rlimit_INFINITY" : C_RLim.t;
val MEMLOCK = _const "MLton_Rlimit_MEMLOCK" : C_Int.t;
val NOFILE = _const "MLton_Rlimit_NOFILE" : C_Int.t;
val NPROC = _const "MLton_Rlimit_NPROC" : C_Int.t;
val RSS = _const "MLton_Rlimit_RSS" : C_Int.t;
val set = _import "MLton_Rlimit_set" private : C_Int.t * C_RLim.t * C_RLim.t -> (C_Int.t) C_Errno.t;
val STACK = _const "MLton_Rlimit_STACK" : C_Int.t;
end
structure Rusage = 
struct
val children_stime_sec = _import "MLton_Rusage_children_stime_sec" private : unit -> C_Time.t;
val children_stime_usec = _import "MLton_Rusage_children_stime_usec" private : unit -> C_SUSeconds.t;
val children_utime_sec = _import "MLton_Rusage_children_utime_sec" private : unit -> C_Time.t;
val children_utime_usec = _import "MLton_Rusage_children_utime_usec" private : unit -> C_SUSeconds.t;
val gc_stime_sec = _import "MLton_Rusage_gc_stime_sec" private : unit -> C_Time.t;
val gc_stime_usec = _import "MLton_Rusage_gc_stime_usec" private : unit -> C_SUSeconds.t;
val gc_utime_sec = _import "MLton_Rusage_gc_utime_sec" private : unit -> C_Time.t;
val gc_utime_usec = _import "MLton_Rusage_gc_utime_usec" private : unit -> C_SUSeconds.t;
val getrusage = _import "MLton_Rusage_getrusage" private : unit -> unit;
val self_stime_sec = _import "MLton_Rusage_self_stime_sec" private : unit -> C_Time.t;
val self_stime_usec = _import "MLton_Rusage_self_stime_usec" private : unit -> C_SUSeconds.t;
val self_utime_sec = _import "MLton_Rusage_self_utime_sec" private : unit -> C_Time.t;
val self_utime_usec = _import "MLton_Rusage_self_utime_usec" private : unit -> C_SUSeconds.t;
end
structure Syslog = 
struct
val closelog = _import "MLton_Syslog_closelog" private : unit -> unit;
structure Facility = 
struct
val LOG_AUTH = _const "MLton_Syslog_Facility_LOG_AUTH" : C_Int.t;
val LOG_CRON = _const "MLton_Syslog_Facility_LOG_CRON" : C_Int.t;
val LOG_DAEMON = _const "MLton_Syslog_Facility_LOG_DAEMON" : C_Int.t;
val LOG_KERN = _const "MLton_Syslog_Facility_LOG_KERN" : C_Int.t;
val LOG_LOCAL0 = _const "MLton_Syslog_Facility_LOG_LOCAL0" : C_Int.t;
val LOG_LOCAL1 = _const "MLton_Syslog_Facility_LOG_LOCAL1" : C_Int.t;
val LOG_LOCAL2 = _const "MLton_Syslog_Facility_LOG_LOCAL2" : C_Int.t;
val LOG_LOCAL3 = _const "MLton_Syslog_Facility_LOG_LOCAL3" : C_Int.t;
val LOG_LOCAL4 = _const "MLton_Syslog_Facility_LOG_LOCAL4" : C_Int.t;
val LOG_LOCAL5 = _const "MLton_Syslog_Facility_LOG_LOCAL5" : C_Int.t;
val LOG_LOCAL6 = _const "MLton_Syslog_Facility_LOG_LOCAL6" : C_Int.t;
val LOG_LOCAL7 = _const "MLton_Syslog_Facility_LOG_LOCAL7" : C_Int.t;
val LOG_LPR = _const "MLton_Syslog_Facility_LOG_LPR" : C_Int.t;
val LOG_MAIL = _const "MLton_Syslog_Facility_LOG_MAIL" : C_Int.t;
val LOG_NEWS = _const "MLton_Syslog_Facility_LOG_NEWS" : C_Int.t;
val LOG_SYSLOG = _const "MLton_Syslog_Facility_LOG_SYSLOG" : C_Int.t;
val LOG_USER = _const "MLton_Syslog_Facility_LOG_USER" : C_Int.t;
val LOG_UUCP = _const "MLton_Syslog_Facility_LOG_UUCP" : C_Int.t;
end
structure Logopt = 
struct
val LOG_CONS = _const "MLton_Syslog_Logopt_LOG_CONS" : C_Int.t;
val LOG_NDELAY = _const "MLton_Syslog_Logopt_LOG_NDELAY" : C_Int.t;
val LOG_NOWAIT = _const "MLton_Syslog_Logopt_LOG_NOWAIT" : C_Int.t;
val LOG_ODELAY = _const "MLton_Syslog_Logopt_LOG_ODELAY" : C_Int.t;
val LOG_PERROR = _const "MLton_Syslog_Logopt_LOG_PERROR" : C_Int.t;
val LOG_PID = _const "MLton_Syslog_Logopt_LOG_PID" : C_Int.t;
end
val openlog = _import "MLton_Syslog_openlog" private : NullString8.t * C_Int.t * C_Int.t -> unit;
structure Severity = 
struct
val LOG_ALERT = _const "MLton_Syslog_Severity_LOG_ALERT" : C_Int.t;
val LOG_CRIT = _const "MLton_Syslog_Severity_LOG_CRIT" : C_Int.t;
val LOG_DEBUG = _const "MLton_Syslog_Severity_LOG_DEBUG" : C_Int.t;
val LOG_EMERG = _const "MLton_Syslog_Severity_LOG_EMERG" : C_Int.t;
val LOG_ERR = _const "MLton_Syslog_Severity_LOG_ERR" : C_Int.t;
val LOG_INFO = _const "MLton_Syslog_Severity_LOG_INFO" : C_Int.t;
val LOG_NOTICE = _const "MLton_Syslog_Severity_LOG_NOTICE" : C_Int.t;
val LOG_WARNING = _const "MLton_Syslog_Severity_LOG_WARNING" : C_Int.t;
end
val syslog = _import "MLton_Syslog_syslog" private : C_Int.t * NullString8.t -> unit;
end
end
structure Net = 
struct
val htonl = _import "Net_htonl" private : Word32.t -> Word32.t;
val htons = _import "Net_htons" private : Word16.t -> Word16.t;
val ntohl = _import "Net_ntohl" private : Word32.t -> Word32.t;
val ntohs = _import "Net_ntohs" private : Word16.t -> Word16.t;
end
structure NetHostDB = 
struct
val getByAddress = _import "NetHostDB_getByAddress" private : (Word8.t) vector * C_Socklen.t -> C_Int.t;
val getByName = _import "NetHostDB_getByName" private : NullString8.t -> C_Int.t;
val getEntryAddrsN = _import "NetHostDB_getEntryAddrsN" private : C_Int.t * (Word8.t) array -> unit;
val getEntryAddrsNum = _import "NetHostDB_getEntryAddrsNum" private : unit -> C_Int.t;
val getEntryAddrType = _import "NetHostDB_getEntryAddrType" private : unit -> C_Int.t;
val getEntryAliasesN = _import "NetHostDB_getEntryAliasesN" private : C_Int.t -> C_String.t;
val getEntryAliasesNum = _import "NetHostDB_getEntryAliasesNum" private : unit -> C_Int.t;
val getEntryLength = _import "NetHostDB_getEntryLength" private : unit -> C_Int.t;
val getEntryName = _import "NetHostDB_getEntryName" private : unit -> C_String.t;
val getHostName = _import "NetHostDB_getHostName" private : (Char8.t) array * C_Size.t -> (C_Int.t) C_Errno.t;
val INADDR_ANY = _const "NetHostDB_INADDR_ANY" : C_Int.t;
val inAddrSize = _const "NetHostDB_inAddrSize" : C_Size.t;
end
structure NetProtDB = 
struct
val getByName = _import "NetProtDB_getByName" private : NullString8.t -> C_Int.t;
val getByNumber = _import "NetProtDB_getByNumber" private : C_Int.t -> C_Int.t;
val getEntryAliasesN = _import "NetProtDB_getEntryAliasesN" private : C_Int.t -> C_String.t;
val getEntryAliasesNum = _import "NetProtDB_getEntryAliasesNum" private : unit -> C_Int.t;
val getEntryName = _import "NetProtDB_getEntryName" private : unit -> C_String.t;
val getEntryProto = _import "NetProtDB_getEntryProto" private : unit -> C_Int.t;
end
structure NetServDB = 
struct
val getByName = _import "NetServDB_getByName" private : NullString8.t * NullString8.t -> C_Int.t;
val getByNameNull = _import "NetServDB_getByNameNull" private : NullString8.t -> C_Int.t;
val getByPort = _import "NetServDB_getByPort" private : C_Int.t * NullString8.t -> C_Int.t;
val getByPortNull = _import "NetServDB_getByPortNull" private : C_Int.t -> C_Int.t;
val getEntryAliasesN = _import "NetServDB_getEntryAliasesN" private : C_Int.t -> C_String.t;
val getEntryAliasesNum = _import "NetServDB_getEntryAliasesNum" private : unit -> C_Int.t;
val getEntryName = _import "NetServDB_getEntryName" private : unit -> C_String.t;
val getEntryPort = _import "NetServDB_getEntryPort" private : unit -> C_Int.t;
val getEntryProto = _import "NetServDB_getEntryProto" private : unit -> C_String.t;
end
structure OS = 
struct
structure IO = 
struct
val poll = _import "OS_IO_poll" private : (C_Fd.t) vector * (C_Short.t) vector * C_NFds.t * C_Int.t * (C_Short.t) array -> (C_Int.t) C_Errno.t;
val POLLIN = _const "OS_IO_POLLIN" : C_Short.t;
val POLLOUT = _const "OS_IO_POLLOUT" : C_Short.t;
val POLLPRI = _const "OS_IO_POLLPRI" : C_Short.t;
end
end
structure Posix = 
struct
structure Error = 
struct
val clearErrno = _import "Posix_Error_clearErrno" private : unit -> unit;
val E2BIG = _const "Posix_Error_E2BIG" : C_Int.t;
val EACCES = _const "Posix_Error_EACCES" : C_Int.t;
val EADDRINUSE = _const "Posix_Error_EADDRINUSE" : C_Int.t;
val EADDRNOTAVAIL = _const "Posix_Error_EADDRNOTAVAIL" : C_Int.t;
val EAFNOSUPPORT = _const "Posix_Error_EAFNOSUPPORT" : C_Int.t;
